# browser-tester

./: .gitignore  AGENTS.md  Cargo.toml  README.md  tbody\)|tBodies|rows\[|\.rows\b|\.cells\b  todo.md
.github/workflows/: property-fuzz.yml
doc/: e2e-lite-runtime-design.md  html-spec-conformance-roadmap.md
src/: core_dom_utils.rs  core_impl.rs  harness_api.rs  intl_impl.rs  js_regex.rs  lib.rs  runtime_state.rs  runtime_values.rs  script_ast.rs  selector.rs  tests.rs
src/core_impl/: dom.rs  form_controls.rs  html.rs  intl.rs  mod.rs  parser.rs  parser_expr.rs  parser_stmt.rs  runtime.rs  runtime_exec.rs  runtime_platform.rs
src/lib_parts/: core_dom_utils.rs  harness_api.rs  runtime_state.rs  runtime_values.rs  script_ast.rs  selector.rs
src/tests/: async_generator_function_helpers.rs  async_generator_helpers.rs  async_iterator_helpers.rs  collections_url_typed_arrays.rs  dom_abbr_element.rs  dom_address_element.rs  dom_anchor_element.rs  dom_area_element.rs  dom_article_element.rs  dom_aside_element.rs  dom_attribute_reflection_shared.rs  dom_audio_element.rs  dom_b_element.rs  dom_base_element.rs  dom_bdi_element.rs  dom_bdo_element.rs  dom_before_unload_event.rs  dom_blockquote_element.rs  dom_body_element.rs  dom_br_element.rs  dom_cite_element.rs  (+242 more)
tests/: debug_parse.rs  issue_134_137_finitefield_site_regressions.rs  issue_138_141_finitefield_site_regressions.rs  issue_151_finitefield_site_regressions.rs  parser_property_fuzz_test.rs  regression_parser_fixes.rs  regression_real_world_html.rs  regression_runtime_state_fixes.rs  runtime_property_fuzz_test.rs
(+275 files in other folders)
